--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,4 +90,18 @@
     <string name="time_minutes_ago">%d分钟前</string>
     <string name="time_hours_ago">%d小时前</string>
     <string name="time_days_ago">%d天前</string>
+    
+    <!-- Update Check -->
+    <string name="update_check">检查更新</string>
+    <string name="update_available">发现新版本</string>
+    <string name="update_current_version">当前版本</string>
+    <string name="update_latest_version">最新版本</string>
+    <string name="update_checking">检查中...</string>
+    <string name="update_no_update">已是最新版本</string>
+    <string name="update_release_notes">更新内容</string>
+    <string name="update_released_on">发布于 %s</string>
+    <string name="update_prerelease_warning">⚠️ 这是一个预发布版本，可能存在不稳定因素</string>
+    <string name="update_now">立即更新</string>
+    <string name="update_later">稍后提醒</string>
+    <string name="update_failed">检查更新失败</string>
 </resources>
