--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,8 +26,9 @@
     <string name="username_hint">输入用户名</string>
     <string name="password">密码</string>
     <string name="password_hint">输入密码</string>
+    <string name="trust_unsafe_ssl">信任不安全的SSL</string>
+    <string name="trust_unsafe_ssl_desc">允许连接到使用自签名证书或无效SSL证书的服务器</string>
     <string name="test_connection">测试连接</string>
-    <string name="save_settings">保存设置</string>
     
     <!-- Sync Settings -->
     <string name="sync_settings">同步设置</string>
