--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,9 +13,10 @@
     <string name="clipboard_empty">剪贴板为空</string>
     <string name="clipboard_text">文本</string>
     <string name="clipboard_image">图片</string>
-    <string name="clipboard_file">文件(暂不支持,作为文本复制文件名)</string>
+    <string name="clipboard_file">文件</string>
     <string name="copy_to_clipboard">复制到剪贴板</string>
     <string name="copied">已复制</string>
+    <string name="download_file">下载文件</string>
     
     <!-- Settings -->
     <string name="settings">设置</string>
@@ -85,6 +86,7 @@
     <string name="refresh">刷新</string>
     <string name="delete">删除</string>
     <string name="share">分享</string>
+    <string name="download">下载</string>
     
     <!-- Time formats -->
     <string name="time_now">刚刚</string>
