feat(sync): 更新版本号并优化同步服务功能
- 将应用版本号从 1.2.0 更新至 1.3.0(code: 5)
- 调整文件自动保存逻辑，暂时移除图片自动下载
- 增加日志记录以跟踪自动保存设置和文件操作
- 修改通知文本以明确服务状态和重启生效提示
- 更新通知操作按钮文字，增强用户操作意图表达
- 添加保存设置时的日志输出便于调试

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,6 +87,8 @@
     <string name="delete">删除</string>
     <string name="share">分享</string>
     <string name="download">下载</string>
+    <string name="manual_sync">手动同步</string>
+    <string name="stop_serve">停止服务</string>
     
     <!-- Time formats -->
     <string name="time_now">刚刚</string>
