--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,6 +100,7 @@
     
     <!-- Navigation -->
     <string name="home">首页</string>
+    <string name="logs">日志</string>
     <string name="navigation_settings">设置</string>
     
     <!-- Notification -->
@@ -156,4 +157,12 @@
     <string name="update_now">立即更新</string>
     <string name="update_later">稍后提醒</string>
     <string name="update_failed">检查更新失败</string>
+    
+    <!-- Logs -->
+    <string name="no_logs">暂无日志</string>
+    <string name="auto_refresh">自动刷新</string>
+    <string name="export_logs">导出日志</string>
+    <string name="logs_exported_success">日志已导出到: %s</string>
+    <string name="logs_export_failed">日志导出失败</string>
+    <string name="logs_export_failed_with_error">日志导出失败: %s</string>
 </resources>
