feat(settings): 添加日志显示数量设置功能
- 在设置中新增日志显示数量配置项，支持自定义显示条数或显示全部
- 实现日志页面根据设置动态加载指定数量的日志记录
- 更新相关字符串资源和界面描述文字
- 修复日志页面上下文传递问题，确保功能正常运行
- 调整剪贴板历史显示数量标签文案，提升表述准确性
- 扩展Logger工具类，增加获取全部日志的方法支持

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,7 +60,9 @@
     <string name="set_sync_interval">设置同步间隔</string>
     <string name="interval_time_seconds">间隔时间（秒）</string>
     <string name="set_clipboard_history_count">设置历史显示数量</string>
-    <string name="display_count_items">显示数量(1-100条)</string>
+    <string name="display_clipboard_history_count">显示数量(1-100条)</string>
+    <string name="set_log_display_count">设置日志显示数量</string>
+    <string name="display_log_count">显示数量(-1为全部)</string>
     
     <!-- Other Settings -->
     <string name="other_settings">其他设置</string>
@@ -77,6 +79,8 @@
     
     <!-- Miscellaneous -->
     <string name="miscellaneous">杂项</string>
+    <string name="log_display_count">日志显示数量</string>
+    <string name="log_display_count_desc">设置日志页面显示的日志条数</string>
     <string name="reset_database">重置APP数据库</string>
     <string name="reset_database_desc">遇到问题可尝试重置数据库,清除APP所有剪贴板历史记录</string>
     <string name="reset_button">重置</string>
